use MELTANO_PROJECT_ROOT in meltano.yml instead of local paths

--- a/my-meltano-project/meltano.yml
+++ b/my-meltano-project/meltano.yml
@@ -15,8 +15,7 @@ plugins:
     config:
       files:
       - entity: order_details
-        path: 
-          /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/code-main/data/order_details.csv
+        path: ${MELTANO_PROJECT_ROOT}/code-main/data/order_details.csv
         keys:
         - order_id
         - product_id
@@ -43,8 +42,7 @@ plugins:
     config:
       files:
       - entity: order_details
-        path: 
-          /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/local_data/step1_details/2024-11-09/order_details.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_details/2024-11-09/order_details.csv
         keys:
         - order_id
         - product_id
@@ -55,16 +53,16 @@ plugins:
     config:
       files:
       - entity: public-us_states
-        path: /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/local_data/step1_northwind/2024-11-09/public-us_states.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/2024-11-09/public-us_states.csv
         keys:
         - state_id
       - entity: public-territories
-        path: /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/local_data/step1_northwind/2024-11-09/public-territories.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/2024-11-09/public-territories.csv
         keys:
         - territory_id
         - region_id
       - entity: public-suppliers
-        path: /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/local_data/step1_northwind/2024-11-09/public-suppliers.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/2024-11-09/public-suppliers.csv
         keys:
         - supplier_id
   loaders:
@@ -73,8 +71,7 @@ plugins:
     variant: meltanolabs
     pip_url: git+https://github.com/MeltanoLabs/target-csv.git
     config:
-      destination_path: 
-        /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/local_data/step1_northwind
+      destination_path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind
       # file_naming_scheme: '{timestamp}/{stream_name}.csv'
       file_naming_scheme: '{datestamp}/{stream_name}.csv'
   - name: target-step1-details
@@ -82,7 +79,7 @@ plugins:
     variant: meltanolabs
     pip_url: git+https://github.com/MeltanoLabs/target-csv.git
     config:
-      destination_path: /home/battisti/Documents/personal_workspace/meltano_northwind/my-meltano-project/local_data/step1_details
+      destination_path: ${MELTANO_PROJECT_ROOT}/local_data/step1_details
       # file_naming_scheme: '{timestamp}/{stream_name}.csv'
       file_naming_scheme: '{datestamp}/{stream_name}.csv'
   - name: target-step2-northwind
