--- a/my-meltano-project/meltano.yml
+++ b/my-meltano-project/meltano.yml
@@ -42,7 +42,7 @@ plugins:
     config:
       files:
       - entity: order_details
-        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_details/2024-11-09/order_details.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_details/order_details/2024-11-09.csv
         keys:
         - order_id
         - product_id
@@ -53,16 +53,16 @@ plugins:
     config:
       files:
       - entity: public-us_states
-        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/2024-11-09/public-us_states.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/public-us_states/2024-11-09.csv
         keys:
         - state_id
       - entity: public-territories
-        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/2024-11-09/public-territories.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/public-territories/2024-11-09.csv
         keys:
         - territory_id
         - region_id
       - entity: public-suppliers
-        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/2024-11-09/public-suppliers.csv
+        path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind/public-suppliers/2024-11-09.csv
         keys:
         - supplier_id
   loaders:
@@ -72,16 +72,16 @@ plugins:
     pip_url: git+https://github.com/MeltanoLabs/target-csv.git
     config:
       destination_path: ${MELTANO_PROJECT_ROOT}/local_data/step1_northwind
-      # file_naming_scheme: '{timestamp}/{stream_name}.csv'
-      file_naming_scheme: '{datestamp}/{stream_name}.csv'
+      # file_naming_scheme: '{stream_name}/{timestamp}.csv'
+      file_naming_scheme: '{stream_name}/{datestamp}.csv'
   - name: target-step1-details
     inherit_from: target-csv
     variant: meltanolabs
     pip_url: git+https://github.com/MeltanoLabs/target-csv.git
     config:
       destination_path: ${MELTANO_PROJECT_ROOT}/local_data/step1_details
-      # file_naming_scheme: '{timestamp}/{stream_name}.csv'
-      file_naming_scheme: '{datestamp}/{stream_name}.csv'
+      # file_naming_scheme: '{stream_name}/{timestamp}.csv'
+      file_naming_scheme: '{stream_name}/{datestamp}.csv'
   - name: target-step2-northwind
     inherit_from: target-postgres
     variant: meltanolabs
